# backend/internal/postagem/postagemsvc/model.go
@@ -5,11 +5,12 @@ import (
 )
 
 type Postagem struct {
-	Titulo    string   `json:"titulo"`
-	Descricao string   `json:"descricao"`
-	UserID    string   `json:"user_id"`
-	Categoria string   `json:"categoria"`
-	Imagens   []string `json:"imagens"`
+	Titulo              string   `json:"titulo"`
+	Descricao           string   `json:"descricao"`
+	UserID              string   `json:"user_id"`
+	Categoria           string   `json:"categoria"`
+	Imagens             []string `json:"imagens"`
+	MarcadoComoFavorito bool     `json:"marcado_como_favorito"`
 }
 
 type PostagemWrite struct {
